Use absolute paths in origin names