@@ -6,6 +6,7 @@ import com.google.gson.reflect.TypeToken;
 import net.neoforged.accesstransformer.AccessTransformer;
 import net.neoforged.accesstransformer.ml.AccessTransformerService;
 import net.neoforged.accesstransformer.parser.AccessTransformerList;
+import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.powermock.reflect.Whitebox;
 
@@ -22,15 +23,13 @@ import java.util.Map;
 import java.util.TreeMap;
 import java.util.stream.Collectors;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-
 public class AccessTransformerLoadTest {
     @Test
     public void testLoadForgeAT() throws IOException, URISyntaxException {
         final AccessTransformerList atLoader = new AccessTransformerList();
         atLoader.loadFromResource("forge_at.cfg");
         final Map<String, List<AccessTransformer>> accessTransformers = atLoader.getAccessTransformers();
-        testText(accessTransformers);
+        testText(accessTransformers, Paths.get(ClassLoader.getSystemClassLoader().getResource("forge_at.cfg").toURI()));
     }
 
     @Test
@@ -41,11 +40,11 @@ public class AccessTransformerLoadTest {
             mls.engine.loadATFromPath(atPath);
             final AccessTransformerList list = Whitebox.getInternalState(mls.engine, "masterList");
             final Map<String, List<AccessTransformer>> accessTransformers = list.getAccessTransformers();
-            testText(accessTransformers);
+            testText(accessTransformers, atPath);
         }
     }
 
-    private static void testText(final Map<String, List<AccessTransformer>> accessTransformers) throws URISyntaxException, IOException {
+    private static void testText(final Map<String, List<AccessTransformer>> accessTransformers, Path source) throws URISyntaxException, IOException {
         accessTransformers.forEach((k,v) -> System.out.printf("Got %d ATs for %s:\n\t%s\n", v.size(), k, v.stream().map(Object::toString).collect(Collectors.joining("\n\t"))));
 
         final TreeMap<String, List<String>> testOutput = accessTransformers.entrySet().stream().collect(
@@ -57,13 +56,14 @@ public class AccessTransformerLoadTest {
                 )
         );
 
-        final String text = new String(Files.readAllBytes(Paths.get(ClassLoader.getSystemClassLoader().getResource("forge_at.cfg.json").toURI())), StandardCharsets.UTF_8);
+        final String text = Files.readString(Paths.get(ClassLoader.getSystemClassLoader().getResource("forge_at.cfg.json").toURI()), StandardCharsets.UTF_8);
         final Gson GSON = new GsonBuilder().setPrettyPrinting().create();
         final TreeMap<String, List<String>> expectation = GSON.fromJson(text, new TypeToken<TreeMap<String, List<String>>>() {}.getType());
+        expectation.values().forEach(value -> value.replaceAll(str -> str.replace("{cfgfile}", source.toAbsolutePath().toString())));
 
         final String output = GSON.toJson(testOutput);
         final String expect = GSON.toJson(expectation);
 
-        assertEquals(expect, output);
+        Assertions.assertThat(output).isEqualToNormalizingNewlines(expect);
     }
 }
